using UnityEngine;

public class Consts : MonoBehaviour
{
    public const string HORIZONTAL = "horizontal";
    public const string VERTICAL = "vertical";
    public const string ATTACK = "attack";
    public const string IS_GROUNDED = "isGrounded";
    public const string SPEED = "speed";
    public const string YSPEED = "ySpeed";

    public const string PLAYER = "Player";
    public const string ENEMY = "Enemy";
    public const string MOVING_PLATFORM = "MovingPlatform";
    public const string SIGNPOST = "Signpost";

    public const string MAIN_MENU = "MainMenu";
    public const string LEVEL_MAP = "LevelMap";
    public const string LEVEL1_1 = "Level1_1";
    public const string LEVEL1_2 = "Level1_2";

    public const string NEW_PROFILE_ERROR_ALREADY_USED = "Profil o podanej nazwie ju¿ istnieje";
    public const string NEW_PROFILE_ERROR_EMPTY_NAME = "Nazwa profilu nie mo¿e byæ pusta";
}
